--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "overteam",
   "version": "0.1.0",
-  "private": true,
+  "license": "AGPL-3.0",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
